--- a/_modules/jaxprop/components/nozzle_model_core.html
+++ b/_modules/jaxprop/components/nozzle_model_core.html
@@ -428,6 +428,16 @@ document.write(`
         <span class="s2">&quot;N&quot;</span><span class="p">:</span> <span class="n">N</span><span class="p">,</span>
     <span class="p">}</span>
 
+
+
+    <span class="c1"># A = {**out, **state.to_dict(include_aliases=True)}</span>
+
+    <span class="c1"># print(&quot;Contents of A:&quot;)</span>
+    <span class="c1"># for k, v in A.items():</span>
+
+    <span class="c1">#     print(f&quot;{k}: {type(v)} = {v}&quot;)</span>
+
+
     <span class="k">return</span> <span class="p">{</span><span class="o">**</span><span class="n">out</span><span class="p">,</span> <span class="o">**</span><span class="n">state</span><span class="o">.</span><span class="n">to_dict</span><span class="p">(</span><span class="n">include_aliases</span><span class="o">=</span><span class="kc">True</span><span class="p">)}</span></div>
 
     <span class="c1"># return {**out, **state}</span>
